    * lang/czech: Updated.
    * libraries/charset_conversion.lib.php: Do not convert, if charsets are
      same.
    * config.inc.php, export.php, lang/*, libraries/config_import.lib.php,
      libraries/display_export.lib.php, libraries/export/xls.php,
      Documentation.html: EXPERIMENTAL native MS Excel export support, using
      PEAR module Spreadsheet_Excel_Writer (RFE #968110).

2004-06-07 Alexander M. Turek  <me@derrabus.de>
    * css/phpmyadmin.css.php: beautifications.
    * server_databases.php, server_privileges.php, css/phpmyadmin.css.php:
      Enabled new icons for privileges administration (patch #947190).
    * lang/*.inc.php, libraries/mysql_charsets.lib.php: The new collation page
      latin1_spanish_ci (introduced with MySQL 4.1.2) is now described
      correctly.
    * lang/german-*.inc.php: Updates.

2004-06-06 Garvin Hicking <me@supergarv.de>
    * libraries/display_tbl.lib.php, libraries/functions.js,
      css/phpmyadmin.css.php: Further fixing of broken vertical
      column highlighting; empty repeated header cells are now <th>, not
      <td>. Adjusted CSS to not change visual display of those.
    * (same files): Optimized unneccessary preg_replace.

2004-06-04 Michal Čihař  <michal@cihar.com>
    * libraries/read_dump.lib.php: Do not strip comments here.
    * libraries/sqlparser.lib.php: Handle correctly all MySQL comments (-- can
      be followed with any control char) (patch #965106).
    * lang/danish: Updated, thanks to AlleyKat - dk_alleykat.

2004-06-04 Garvin Hicking <me@supergarv.de>
    * Bug #959320: Broken row highlighting in vertical
      browsing mode fixed. The pointer will now highlight
      columns as expected and unmark the row after unclicking.

2004-06-03 Alexander M. Turek  <me@derrabus.de>
    * header.inc.php: Undefined variable.

2004-06-03 Michal Čihař  <michal@cihar.com>
    * db_details_links.php, header.inc.php, server_links.inc.php,